tests/ui/error-codes/E0004-2.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/E0004-2.rs:4:11
   |
LL |     match x { }
   |           ^ patterns `None` and `Some(_)` not covered
   |
   = note: the matched value is of type `Option<i32>`
help: ensure that all possible cases are being handled by adding more match arms
   |
LL ~     match x {
LL +         None => { todo!() }
LL +         Some(_) => { todo!() }
LL ~     }
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
